src/c/lexer/lexer.re.c
/* Generated by re2c 4.5.1 on Wed Jun 10 19:13:43 2026 */
#line 1 "src/c/lexer/lexer.re"
#include "core/types.h"
#include "c/lexer/lexer.h"
#include "c/lexer/token.h"
#include "core/logger/logger.h"
#include <stdio.h>
#include <string.h>

static void
s_update_pos(struct dpp_lexer *lex)
{
    lex->lex_column += (u32)(lex->lex_cursor - lex->lex_token);
}

s32
dpp_lexer_next(struct dpp_lexer *lex)
{
lex_next:
    lex->lex_token = lex->lex_cursor;

/* clang-format off */
    
#line 25 "src/c/lexer/lexer.re.c"
{
	u8 yych;
	unsigned int yyaccept = 0;
	if (lex->lex_limit <= lex->lex_cursor) goto yy456;
	yych = *lex->lex_cursor;
	switch (yych) {
		case '\t':
		case '\v':
		case '\f':
		case ' ': goto yy3;
		case '\n': goto yy5;
		case '\r': goto yy6;
		case '!': goto yy7;
		case '"': goto yy9;
		case '#': goto yy10;
		case '%': goto yy11;
		case '&': goto yy13;
		case '\'': goto yy15;
		case '(': goto yy16;
		case ')': goto yy17;
		case '*': goto yy18;
		case '+': goto yy20;
		case ',': goto yy22;
		case '-': goto yy23;
		case '.': goto yy25;
		case '/': goto yy27;
		case '0': goto yy29;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy31;
		case ':': goto yy32;
		case ';': goto yy33;
		case '<': goto yy34;
		case '=': goto yy36;
		case '>': goto yy38;
		case '?': goto yy40;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'h':
		case 'j':
		case 'k':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'x':
		case 'y':
		case 'z': goto yy41;
		case '[': goto yy44;
		case '\\': goto yy46;
		case ']': goto yy47;
		case '^': goto yy49;
		case '_': goto yy51;
		case 'a': goto yy52;
		case 'b': goto yy53;
		case 'c': goto yy54;
		case 'd': goto yy55;
		case 'e': goto yy56;
		case 'f': goto yy57;
		case 'g': goto yy58;
		case 'i': goto yy59;
		case 'l': goto yy60;
		case 'r': goto yy61;
		case 's': goto yy62;
		case 't': goto yy63;
		case 'u': goto yy64;
		case 'v': goto yy65;
		case 'w': goto yy66;
		case '{': goto yy67;
		case '|': goto yy68;
		case '}': goto yy70;
		case '~': goto yy71;
		default: goto yy1;
	}
yy1:
	++lex->lex_cursor;
yy2:
#line 206 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_EOF; }
#line 136 "src/c/lexer/lexer.re.c"
yy3:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '\t':
		case '\v':
		case '\f':
		case ' ': goto yy3;
		default: goto yy4;
	}
yy4:
#line 40 "src/c/lexer/lexer.re"
	{ lex->lex_column += (u32)(lex->lex_cursor - lex->lex_token); goto lex_next; }
#line 149 "src/c/lexer/lexer.re.c"
yy5:
	++lex->lex_cursor;
#line 47 "src/c/lexer/lexer.re"
	{ 
            lex->lex_line++;
            lex->lex_line_ptr = lex->lex_cursor;
            lex->lex_column = 1;
            lex->lex_is_bol = true;
            goto lex_next;
        }
#line 160 "src/c/lexer/lexer.re.c"
yy6:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '\n': goto yy5;
		default: goto yy2;
	}
yy7:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '=': goto yy72;
		default: goto yy8;
	}
yy8:
#line 175 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_BANG; }
#line 176 "src/c/lexer/lexer.re.c"
yy9:
	yyaccept = 0;
	yych = *(lex->lex_marker = ++lex->lex_cursor);
	goto yy74;
yy10:
	++lex->lex_cursor;
#line 55 "src/c/lexer/lexer.re"
	{
            if (lex->lex_is_bol) {
                s_update_pos(lex);
                lex->lex_is_bol = false;
                return TOK_PP_HASH;
            }
            s_update_pos(lex);
            lex->lex_is_bol = false;
            return '#';
        }
#line 194 "src/c/lexer/lexer.re.c"
yy11:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '=': goto yy78;
		default: goto yy12;
	}
yy12:
#line 181 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_MOD; }
#line 204 "src/c/lexer/lexer.re.c"
yy13:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '&': goto yy79;
		case '=': goto yy80;
		default: goto yy14;
	}
yy14:
#line 174 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_AMP; }
#line 215 "src/c/lexer/lexer.re.c"
yy15:
	yyaccept = 0;
	yych = *(lex->lex_marker = ++lex->lex_cursor);
	goto yy82;
yy16:
	++lex->lex_cursor;
#line 169 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return '('; }
#line 224 "src/c/lexer/lexer.re.c"
yy17:
	++lex->lex_cursor;
#line 170 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return ')'; }
#line 229 "src/c/lexer/lexer.re.c"
yy18:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '=': goto yy85;
		default: goto yy19;
	}
yy19:
#line 179 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_STAR; }
#line 239 "src/c/lexer/lexer.re.c"
yy20:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '+': goto yy86;
		case '=': goto yy87;
		default: goto yy21;
	}
yy21:
#line 178 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_PLUS; }
#line 250 "src/c/lexer/lexer.re.c"
yy22:
	++lex->lex_cursor;
#line 166 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return ','; }
#line 255 "src/c/lexer/lexer.re.c"
yy23:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '-': goto yy88;
		case '=': goto yy89;
		case '>': goto yy90;
		default: goto yy24;
	}
yy24:
#line 177 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_MINUS; }
#line 267 "src/c/lexer/lexer.re.c"
yy25:
	yyaccept = 1;
	yych = *(lex->lex_marker = ++lex->lex_cursor);
	switch (yych) {
		case '.': goto yy91;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy92;
		default: goto yy26;
	}
yy26:
#line 173 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_DOT; }
#line 288 "src/c/lexer/lexer.re.c"
yy27:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '*': goto yy94;
		case '/': goto yy95;
		case '=': goto yy97;
		default: goto yy28;
	}
yy28:
#line 180 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_DIV; }
#line 300 "src/c/lexer/lexer.re.c"
yy29:
	yyaccept = 2;
	yych = *(lex->lex_marker = ++lex->lex_cursor);
	switch (yych) {
		case '.': goto yy92;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy31;
		case 'F':
		case 'f': goto yy30;
		case 'L':
		case 'l': goto yy100;
		case 'U':
		case 'u': goto yy101;
		case 'X':
		case 'x': goto yy102;
		default: goto yy93;
	}
yy30:
#line 198 "src/c/lexer/lexer.re"
	{ 
            s_update_pos(lex); lex->lex_is_bol = false; return TOK_NUMBER; 
        }
#line 331 "src/c/lexer/lexer.re.c"
yy31:
	yyaccept = 2;
	yych = *(lex->lex_marker = ++lex->lex_cursor);
	switch (yych) {
		case '.': goto yy92;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy31;
		case 'D':
		case 'K':
		case 'd':
		case 'k': goto yy98;
		case 'E':
		case 'e': goto yy99;
		case 'L':
		case 'l': goto yy100;
		case 'U':
		case 'u': goto yy101;
		default: goto yy30;
	}
yy32:
	++lex->lex_cursor;
#line 167 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return ':'; }
#line 363 "src/c/lexer/lexer.re.c"
yy33:
	++lex->lex_cursor;
#line 163 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return ';'; }
#line 368 "src/c/lexer/lexer.re.c"
yy34:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '<': goto yy103;
		case '=': goto yy105;
		default: goto yy35;
	}
yy35:
#line 182 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_LT; }
#line 379 "src/c/lexer/lexer.re.c"
yy36:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '=': goto yy106;
		default: goto yy37;
	}
yy37:
#line 168 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return '='; }
#line 389 "src/c/lexer/lexer.re.c"
yy38:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '=': goto yy107;
		case '>': goto yy108;
		default: goto yy39;
	}
yy39:
#line 183 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_GT; }
#line 400 "src/c/lexer/lexer.re.c"
yy40:
	++lex->lex_cursor;
#line 186 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_QUERY; }
#line 405 "src/c/lexer/lexer.re.c"
yy41:
	yych = *++lex->lex_cursor;
yy42:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy41;
		default: goto yy43;
	}
yy43:
#line 191 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_IDENT; }
#line 478 "src/c/lexer/lexer.re.c"
yy44:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '[': goto yy110;
		default: goto yy45;
	}
yy45:
#line 171 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return '['; }
#line 488 "src/c/lexer/lexer.re.c"
yy46:
	yyaccept = 0;
	yych = *(lex->lex_marker = ++lex->lex_cursor);
	switch (yych) {
		case '\n': goto yy111;
		case '\r': goto yy112;
		default: goto yy2;
	}
yy47:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case ']': goto yy113;
		default: goto yy48;
	}
yy48:
#line 172 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return ']'; }
#line 506 "src/c/lexer/lexer.re.c"
yy49:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '=': goto yy114;
		default: goto yy50;
	}
yy50:
#line 184 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_CARET; }
#line 516 "src/c/lexer/lexer.re.c"
yy51:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'A': goto yy115;
		case 'B': goto yy116;
		case 'C': goto yy117;
		case 'F': goto yy118;
		case 'I': goto yy119;
		case 'U': goto yy120;
		case '_': goto yy121;
		default: goto yy42;
	}
yy52:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 's': goto yy122;
		case 'u': goto yy123;
		default: goto yy42;
	}
yy53:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'r': goto yy124;
		default: goto yy42;
	}
yy54:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'a': goto yy125;
		case 'h': goto yy126;
		case 'o': goto yy127;
		default: goto yy42;
	}
yy55:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'e': goto yy128;
		case 'o': goto yy129;
		default: goto yy42;
	}
yy56:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'l': goto yy131;
		case 'n': goto yy132;
		case 'x': goto yy133;
		default: goto yy42;
	}
yy57:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'a': goto yy134;
		case 'l': goto yy135;
		case 'o': goto yy136;
		default: goto yy42;
	}
yy58:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'o': goto yy137;
		default: goto yy42;
	}
yy59:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'f': goto yy138;
		case 'n': goto yy140;
		default: goto yy42;
	}
yy60:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'o': goto yy141;
		default: goto yy42;
	}
yy61:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'e': goto yy142;
		default: goto yy42;
	}
yy62:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'h': goto yy143;
		case 'i': goto yy144;
		case 't': goto yy145;
		case 'w': goto yy146;
		default: goto yy42;
	}
yy63:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'r': goto yy147;
		case 'y': goto yy148;
		default: goto yy42;
	}
yy64:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'n': goto yy149;
		default: goto yy42;
	}
yy65:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'o': goto yy150;
		default: goto yy42;
	}
yy66:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case 'h': goto yy151;
		default: goto yy42;
	}
yy67:
	++lex->lex_cursor;
#line 164 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return '{'; }
#line 636 "src/c/lexer/lexer.re.c"
yy68:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '=': goto yy152;
		case '|': goto yy153;
		default: goto yy69;
	}
yy69:
#line 185 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_PIPE; }
#line 647 "src/c/lexer/lexer.re.c"
yy70:
	++lex->lex_cursor;
#line 165 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return '}'; }
#line 652 "src/c/lexer/lexer.re.c"
yy71:
	++lex->lex_cursor;
#line 176 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_TILDE; }
#line 657 "src/c/lexer/lexer.re.c"
yy72:
	++lex->lex_cursor;
#line 162 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_NE; }
#line 662 "src/c/lexer/lexer.re.c"
yy73:
	yych = *++lex->lex_cursor;
yy74:
	switch (yych) {
		case '"': goto yy75;
		case '\\': goto yy76;
		default: goto yy73;
	}
yy75:
	++lex->lex_cursor;
#line 202 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_STRING; }
#line 675 "src/c/lexer/lexer.re.c"
yy76:
	yych = *++lex->lex_cursor;
	switch (yych) {
		case '\n': goto yy77;
		default: goto yy73;
	}
yy77:
	lex->lex_cursor = lex->lex_marker;
	switch (yyaccept) {
		case 0: goto yy2;
		case 1: goto yy26;
		default: goto yy30;
	}
yy78:
	++lex->lex_cursor;
#line 148 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_MOD_ASSIGN; }
#line 693 "src/c/lexer/lexer.re.c"
yy79:
	++lex->lex_cursor;
#line 157 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_AND; }
#line 698 "src/c/lexer/lexer.re.c"
yy80:
	++lex->lex_cursor;
#line 149 "src/c/lexer/lexer.re"
	{ s_update_pos(lex); lex->lex_is_bol = false; return TOK_AND_ASSIGN; }
#line 703 "src/c/lexer/lexer.re.c"
yy81:
	yych = *++lex->lex_cursor;
yy82:
	switch (yych) {
		case '\'': goto yy83;
		case '\\': goto yy84;
		default: goto yy81;
	}
yy83:
	++lex->lex_cursor;
#line 203 "src/c/lexer/lexer.re"
